k8s/strapi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: strapi
  name: strapi-deployment
  namespace: default
  resourceVersion: "38323844"
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: strapi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: strapi
    spec:
      containers:
      - env:
        - name: DATABASE_CLIENT
          value: mysql
        - name: DATABASE_NAME
          value: strapi
        - name: DATABASE_HOST
          value: cie-db.default.svc.cluster.local
        - name: DATABASE_PORT
          value: "3306"
        - name: DATABASE_USERNAME
          value: strapiuser
        - name: DATABASE_PASSWORD
          value: strapiuser
        - name: DATABASE_SSL
          value: "FALSE"
        image: strapi/strapi:latest
        imagePullPolicy: Always
        name: strapi
        ports:
        - containerPort: 1337
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
