k8s/cie-deploy-db-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: cie-db
spec:
  ports:
  - port: 3306
  selector:
    app: cie-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cie-db
spec:
  selector:
    matchLabels:
      app: cie-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cie-db
    spec:
      containers:
      - image: mysql/mysql-server:8.0
        name: cie-db
        ports:
        - containerPort: 3306
          name: cie-db
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
