k8s/cie-deploy-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: cie-db-lb
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.44
  selector:
    app: cie-db
  ports:
    - name: mysql-port
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: cie-db
spec:
  ports:
  - port: 3306
  selector:
    app: cie-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cie-db
spec:
  selector:
    matchLabels:
      app: cie-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cie-db
    spec:
      containers:
      - image: mysql/mysql-server:8.0
        name: cie-db
        ports:
        - containerPort: 3306
          name: cie-db
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-initdb-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-initdb-volume
        configMap:
          name: mysql-initdb-config
