k8s/cie-deploy-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cie-frontend
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.43
  selector:
    app: cie-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cie-frontend
  labels:
    app: cie-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cie-frontend
  template:
    metadata:
      labels:
        app: cie-frontend
    spec:
      containers:
      - name: cie-frontend
        image: vengelmann/cie-frontend
        ports:
        - containerPort: 80
