k8s/cie-redis-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: cie-redis-lb
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.46
  selector:
    app: cie-redis-headless
  ports:
    - name: cie-redis-headless
      port: 6379
      targetPort: 6379
