k8s/cie-strapi-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deployment
  labels:
    app: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: strapi/strapi:latest
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  selector:
    app: strapi
