k8s/k3d-demo-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3d-demo-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k3d-demo
  template:
    metadata:
      labels:
        app: k3d-demo
    spec:
      containers:
      - name: k3d-demo
        image: agabert/beacon
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k3d-demo
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: k3d-demo
