k8s/k3d-loadbalancer.yaml
apiVersion: v1`
kind: Service
metadata:
  name: cie-db-lb
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 33060 # because else it requires sudo access to create low port number and will be stuck in pending state
    targetPort: 3306
    name: http
  selector:
    app: cie-db
