k8s/rocket-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: vengelmann/mongo-rs0:latest
          command: ["mongod", "--nojournal", "--bind_ip_all", "--replSet", "rs0"]
          resources:
            limits: { memory: "100Mi", cpu: "100m" }
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            timeoutSeconds: 5
      volumes:
      - name: mongodb-storage
        persistentVolumeClaim:
          claimName: mongodb-storage-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
# NOTE:omitting type: LoadBalancer
  selector:
    app: mongodb
  ports:
    - port: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocket-chat
  labels:
    app: rocket-chat
spec:
  selector:
    matchLabels:
      app: rocket-chat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rocket-chat
    spec:
      containers:
        - name: rocket-chat
          image: rocket.chat:latest
          resources:
            requests: { memory: "400Mi", cpu: "190m" }
            limits: { memory: "1024Mi", cpu: "190m" }
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: rocket-storage
            mountPath: /app/uploads
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 15
      volumes:
        - name: rocket-storage
          persistentVolumeClaim:
            claimName: rocket-storage-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.47
  selector:
    app: rocket-chat
  ports:
    - name: http
      port: 3000
      targetPort: 3000
