k8s/cie-ingress-prod.yaml
# Purpose: to apply a real TLS certificate to the nginx ingress pod
# and route codinginenglish.com -> www.codinginenglish.com
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cie-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/nickname: "cie-ingress"
spec:
  tls:
  - hosts:
    - codinginenglish.com
    - www.codinginenglish.com
    - remote.codinginenglish.com
    - remote-admin.codinginenglish.com
    - chat.codinginenglish.com
    - ws.codinginenglish.com
    - content.codinginenglish.com
    secretName: cie-tls
  rules:
  - host: www.codinginenglish.com
    http:
      paths:
      - backend:
          serviceName: cie-web
          servicePort: 80
  - host: codinginenglish.com
    http:
      paths:
      - backend:
          serviceName: cie-web
          servicePort: 80
  - host: remote.codinginenglish.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cie-guac
          servicePort: 80
  - host: remote-admin.codinginenglish.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cie-guac-admin
          servicePort: 80
  - host: chat.codinginenglish.com
    http:
      paths:
      - backend:
          serviceName: rocketchat-rocketchat
          servicePort: 80
  - host: ws.codinginenglish.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cie-web
          servicePort: 80
  - host: content.codinginenglish.com
    http:
      paths:
      - path: /
        backend:
          serviceName: strapi-service
          servicePort: 80
